objects/RFP__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Yr_1__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Yr 1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Award_Date__c</fullName>
        <label>Anticipated Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CI_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CI Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Released__c</fullName>
        <label>Date Released</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Legal__c</fullName>
        <label>Date Sent to Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Did_We_Influence_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did We Influence RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronic_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flash_Drive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flash Drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formatting_Instructions__c</fullName>
        <label>Formatting Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GovWin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sourced through GovWin database</inlineHelpText>
        <label>GovWin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hard_Copy_Submittal__c</fullName>
        <label>Hard Copy Submittal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Legal_Review_Date__c</fullName>
        <formula>CASE(
  MOD( Today()- DATE( 1900, 1, 8 ), 7 ),
  0,  Today()+3,
  1,  Today()+3,
  2,  Today()+5,
  3,   Today()+ 5,
  5,  Today()+4, 
    Today() + 3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Legal Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Point_of_Contact__c</fullName>
        <label>Legal Point of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Status__c</fullName>
        <label>Legal Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_AccountName__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge_AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_OppValue__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge_OppValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merge_OpptyOwner__c</fullName>
        <formula>Opportunity__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge_OpptyOwner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Services__c</fullName>
        <formula>text(Opportunity__r.Solution__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge_Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_TargetMarket__c</fullName>
        <formula>text(Opportunity__r.Target_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge_TargetMarket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_UserEmail__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Merge_UserEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Renewal__c</fullName>
        <label>New/Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onlin_Login_Name__c</fullName>
        <label>Onlin Login Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Password__c</fullName>
        <label>Online Password</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Submittal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Submittal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_URL__c</fullName>
        <label>Online URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + " " + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportinuty Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFP</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add contact to "R1 RCM - Product SMEs"  Account to appear in this Lookup</inlineHelpText>
        <label>Product SME</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>0012M000025gQ8DQAU</value>
            </filterItems>
            <filterItems>
                <field>Contact.No_Longer_with_Company__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Add contact to R1 RCM - Product SMEs Account to use this Lookup</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>ProductSME</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <inlineHelpText>Solution  is now propagated from the Opportunity object for Product classification.  This field is left in place for legacy reporting only.</inlineHelpText>
        <label>Legacy Products/Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air RCM</fullName>
                </value>
                <value>
                    <fullName>AN Coding Only</fullName>
                </value>
                <value>
                    <fullName>AN RCM</fullName>
                </value>
                <value>
                    <fullName>AS - Optima ED</fullName>
                </value>
                <value>
                    <fullName>AS - Prosper</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CDX - NEMSIS</fullName>
                </value>
                <value>
                    <fullName>CDX - Trauma</fullName>
                </value>
                <value>
                    <fullName>CORES - ANS</fullName>
                </value>
                <value>
                    <fullName>CORES - CMS</fullName>
                </value>
                <value>
                    <fullName>CORES - FNMS</fullName>
                </value>
                <value>
                    <fullName>CORES - HAN</fullName>
                </value>
                <value>
                    <fullName>CORES - RMS</fullName>
                </value>
                <value>
                    <fullName>ED Billing</fullName>
                </value>
                <value>
                    <fullName>ED Facility Coding</fullName>
                </value>
                <value>
                    <fullName>ED Hospitalist</fullName>
                </value>
                <value>
                    <fullName>ED Physician Coding</fullName>
                </value>
                <value>
                    <fullName>ED RCM</fullName>
                </value>
                <value>
                    <fullName>ED Urgent Care</fullName>
                </value>
                <value>
                    <fullName>ED Wound Care</fullName>
                </value>
                <value>
                    <fullName>Electronic - ICS (Non-Hospital)</fullName>
                </value>
                <value>
                    <fullName>EMCredential</fullName>
                </value>
                <value>
                    <fullName>EMNotify</fullName>
                </value>
                <value>
                    <fullName>EMRegistry</fullName>
                </value>
                <value>
                    <fullName>EMResource</fullName>
                </value>
                <value>
                    <fullName>EMS ASPP</fullName>
                </value>
                <value>
                    <fullName>EMS Coding Only</fullName>
                </value>
                <value>
                    <fullName>EMS Consulting</fullName>
                </value>
                <value>
                    <fullName>EMS RCM</fullName>
                </value>
                <value>
                    <fullName>EMS SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Manager__c</fullName>
        <label>Proposal Manager</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lauri Ross</fullName>
                </value>
                <value>
                    <fullName>Karin Mellow</fullName>
                </value>
                <value>
                    <fullName>Kathleen McCollum</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Cyndi Smith</fullName>
                </value>
                <value>
                    <fullName>Amanda Hill</fullName>
                    <isActive>false</isActive>
                    <label>Amanda Hill</label>
                </value>
                <value>
                    <fullName>Erin Coggins</fullName>
                    <isActive>false</isActive>
                    <label>Erin Coggins</label>
                </value>
                <value>
                    <fullName>Virginia Roberson</fullName>
                    <isActive>false</isActive>
                    <label>Virginia Roberson</label>
                </value>
                <value>
                    <fullName>Whitney Breeden</fullName>
                    <isActive>false</isActive>
                    <label>Whitney Breeden</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions_Due__c</fullName>
        <label>Questions Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Questions_Received__c</fullName>
        <label>Questions Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RFP_Legacy_ID__c</fullName>
        <label>RFP Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Open__c</fullName>
        <formula>AND (NOT ISBLANK(CreatedDate), 
     OR (ISPICKVAL ( RFP_Stage__c, "Initiate"), 
         ISPICKVAL ( RFP_Stage__c, "Kick Off"),
         ISPICKVAL ( RFP_Stage__c, "Develop"),
         ISPICKVAL ( RFP_Stage__c, "Finalize")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is RFP Open</inlineHelpText>
        <label>RFP Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Stage__c</fullName>
        <label>RFP Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bid / No Bid</fullName>
                </value>
                <value>
                    <fullName>Initiate</fullName>
                </value>
                <value>
                    <fullName>Kick Off</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Finalize</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Walk</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFx_Number__c</fullName>
        <label>RFx Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFx_Type__c</fullName>
        <label>RFx Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Unsolicited Proposal</fullName>
                </value>
                <value>
                    <fullName>Follow-up</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Security Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Date_From__c</fullName>
        <inlineHelpText>Date range for legal to do review</inlineHelpText>
        <label>Review Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Date_To__c</fullName>
        <inlineHelpText>Last date for legal to do review</inlineHelpText>
        <label>Review Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_and_Risk_Contact__c</fullName>
        <label>Security and Risk Contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_and_Risk_Type__c</fullName>
        <inlineHelpText>Required when RFx type is Security Questionnaire</inlineHelpText>
        <label>Security and Risk Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RFx_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_date__c</fullName>
        <inlineHelpText>Date this RFP needs to be shipped to meet submittal date</inlineHelpText>
        <label>Ship date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Instructions__c</fullName>
        <label>Shipping Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <formula>text(Opportunity__r.Solution__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submittal_Delivered__c</fullName>
        <label>Submittal Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submittal_Due__c</fullName>
        <label>Submittal Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <formula>text(Opportunity__r.Target_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Legal__c</fullName>
        <formula>"https://app.smartsheet.com/b/form/4f557bcba77d42e1bcde61042cb043b4?Customer%20Name=" + Opportunity__r.Account.Name+ "&amp;Requester%20Email=" +$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Legal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <formula>TEXT(Opportunity__r.Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wet_Ink_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wet/Ink Signature</label>
        <type>Checkbox</type>
    </fields>
    <label>RFP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Submittal_Due__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CompletedTY</fullName>
        <columns>NAME</columns>
        <columns>Amount_Yr_1__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Submittal_Due__c</columns>
        <columns>RFP_Stage__c</columns>
        <columns>Ship_date__c</columns>
        <columns>Review_Date_From__c</columns>
        <columns>Review_Date_To__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RFx_Number__c</columns>
        <columns>RFx_Type__c</columns>
        <columns>Proposal_Manager__c</columns>
        <columns>GovWin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFP_Stage__c</field>
            <operation>equals</operation>
            <value>Completed,Walk,Lost,Won</value>
        </filters>
        <filters>
            <field>Submittal_Due__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>This Year Completed</label>
    </listViews>
    <listViews>
        <fullName>GovWin_RFPs</fullName>
        <columns>NAME</columns>
        <columns>RFP_Open__c</columns>
        <columns>RFP_Stage__c</columns>
        <columns>GovWin__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>New_Renewal__c</columns>
        <columns>Solution__c</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GovWin__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GovWin RFPs</label>
    </listViews>
    <listViews>
        <fullName>Last_Year_Completed</fullName>
        <columns>NAME</columns>
        <columns>Amount_Yr_1__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Submittal_Due__c</columns>
        <columns>RFP_Stage__c</columns>
        <columns>Ship_date__c</columns>
        <columns>Review_Date_From__c</columns>
        <columns>Review_Date_To__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RFx_Number__c</columns>
        <columns>RFx_Type__c</columns>
        <columns>Proposal_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submittal_Due__c</field>
            <operation>equals</operation>
            <value>LAST_YEAR</value>
        </filters>
        <filters>
            <field>RFP_Stage__c</field>
            <operation>equals</operation>
            <value>Completed,Walk,Lost,Won</value>
        </filters>
        <label>Last Year Completed</label>
    </listViews>
    <listViews>
        <fullName>Open_RFPs</fullName>
        <columns>Submittal_Due__c</columns>
        <columns>NAME</columns>
        <columns>New_Renewal__c</columns>
        <columns>RFx_Type__c</columns>
        <columns>RFP_Stage__c</columns>
        <columns>Proposal_Manager__c</columns>
        <columns>Amount_Yr_1__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Ship_date__c</columns>
        <columns>Review_Date_From__c</columns>
        <columns>Review_Date_To__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>GovWin__c</columns>
        <columns>Hard_Copy_Submittal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFP_Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed,Walk,Lost,Won</value>
        </filters>
        <label>Open RFPs</label>
    </listViews>
    <listViews>
        <fullName>This_Year_Completed_Sec</fullName>
        <columns>NAME</columns>
        <columns>Amount_Yr_1__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Submittal_Due__c</columns>
        <columns>RFP_Stage__c</columns>
        <columns>Ship_date__c</columns>
        <columns>Review_Date_From__c</columns>
        <columns>Review_Date_To__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RFx_Number__c</columns>
        <columns>RFx_Type__c</columns>
        <columns>Proposal_Manager__c</columns>
        <columns>GovWin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFP_Stage__c</field>
            <operation>equals</operation>
            <value>Completed,Walk,Lost,Won</value>
        </filters>
        <filters>
            <field>Submittal_Due__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>RFx_Type__c</field>
            <operation>equals</operation>
            <value>Security Questionnaire</value>
        </filters>
        <label>This Year Completed Security Review</label>
    </listViews>
    <nameField>
        <label>RFP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Security_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Text(RFx_Type__c)="Security Questionnaire",isblank(text(Security_and_Risk_Type__c)))</errorConditionFormula>
        <errorDisplayField>Security_and_Risk_Type__c</errorDisplayField>
        <errorMessage>Please select a Security and Risk Type for your Security Questionnaire RFP Type.</errorMessage>
    </validationRules>
</CustomObject>